<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvv"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background">


        <TextView
            android:id="@+id/currentorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Card"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="60dp"
            tools:layout_editor_absoluteY="24dp" />

        <ImageView
            android:id="@+id/arrow"
            android:layout_width="39dp"
            android:layout_height="36dp"
            app:srcCompat="@drawable/arrow"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="24dp" />


        <ImageView
            android:id="@+id/profile"
            android:layout_width="60dp"
            android:layout_height="117dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.95"
            app:layout_constraintStart_toEndOf="@+id/currentorder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/profile"
            tools:ignore="MissingConstraints" />

        <androidx.cardview.widget.CardView
            android:layout_width="377dp"
            android:layout_height="532dp"
            android:layout_margin="10dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="20dp"
            app:cardElevation="10dp"
            app:cardMaxElevation="12dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="9dp"
            tools:layout_editor_absoluteY="145dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="337dp"
                android:layout_height="506dp">

                <TextView

                    android:id="@+id/nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nickname"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="18dp"
                    tools:layout_editor_absoluteY="312dp" />

                <TextView

                    android:id="@+id/cardnumber"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardnumber"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="24dp" />

                <TextView

                    android:id="@+id/country"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="18dp"
                    tools:layout_editor_absoluteY="222dp" />

                <TextView

                    android:id="@+id/cvv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cvv"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="192dp"
                    tools:layout_editor_absoluteY="125dp" />

                <TextView

                    android:id="@+id/expdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/expdate"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="125dp" />

                <EditText
                    android:id="@+id/editTextexpdate"
                    android:layout_width="123dp"
                    android:layout_height="38dp"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="159dp" />

                <EditText
                    android:id="@+id/editTextcvv"
                    android:layout_width="123dp"
                    android:layout_height="38dp"
                    android:ems="10"
                    android:inputType="textPostalAddress"
                    tools:layout_editor_absoluteX="192dp"
                    tools:layout_editor_absoluteY="159dp" />

                <EditText
                    android:id="@+id/editcardnumber"
                    android:layout_width="304dp"
                    android:layout_height="42dp"
                    android:ems="10"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="58dp" />

                <EditText
                    android:id="@+id/editTextnickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="18dp"
                    tools:layout_editor_absoluteY="346dp" />

                <EditText
                    android:id="@+id/editTextcountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="number"
                    tools:layout_editor_absoluteX="18dp"
                    tools:layout_editor_absoluteY="255dp" />

                <Button
                    android:id="@+id/buttonnext"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/next"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.497"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="425dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>