<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">






    <TextView
        android:id="@+id/cylinder_na"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="My Cart"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="60dp"
        tools:layout_editor_absoluteY="24dp" />


    <ImageView
        android:id="@+id/arrow"
        android:layout_width="39dp"
        android:layout_height="36dp"
        app:srcCompat="@drawable/arrow"
        tools:layout_editor_absoluteX="9dp"
        tools:layout_editor_absoluteY="24dp"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/profile"
        android:layout_width="60dp"
        android:layout_height="117dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintStart_toEndOf="@+id/currentorder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="84dp"
        android:layout_height="58dp"
        android:src="@drawable/litro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.048"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.401" />

    <TextView
        android:id="@+id/qty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qty_1"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.289"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.443" />

    <ImageView
        android:layout_width="34sp"
        android:layout_height="34sp"

        android:backgroundTint="@color/gray"
        android:clickable="true"
        android:src="@drawable/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.848"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.406" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="12.5kg Litro"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="258dp" />

    <Button
        android:id="@+id/addmoreproduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/addmoreproduct"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="365dp" />

    <androidx.cardview.widget.CardView
        android:layout_width="377dp"
        android:layout_height="243dp"
        app:cardCornerRadius="20dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="18dp"
        tools:layout_editor_absoluteY="426dp" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/delivery"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delivery to:"
                android:textAlignment="viewStart"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="34dp" />

            <TextView
                android:id="@+id/payment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="PaymentMethod"
                android:textColor="@color/blue_1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="18dp"
                tools:layout_editor_absoluteY="80dp" />

            <TextView
                android:id="@+id/method"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Cash"
                android:textColor="@color/blue_1"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="277dp"
                tools:layout_editor_absoluteY="80dp" />

            <Button
                android:id="@+id/confirmandcountinue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Confrimandcontinue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                tools:layout_editor_absoluteY="150dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>